[!!!][FEATURE] Add EXT:news layouts for 1 and 2 columns. Be careful if you added your own layouts, you might have to update keys.

--- a/Resources/Private/Partials/News/List/Item.html
+++ b/Resources/Private/Partials/News/List/Item.html
@@ -11,6 +11,12 @@
 <f:if condition="{settings.templateLayout} == 1">
 	<f:variable name="newsCols">4</f:variable>
 </f:if>
+<f:if condition="{settings.templateLayout} == 2">
+	<f:variable name="newsCols">2</f:variable>
+</f:if>
+<f:if condition="{settings.templateLayout} == 3">
+	<f:variable name="newsCols">1</f:variable>
+</f:if>
 <f:variable name="columnConfig">{settings.responsiveimages.list.{newsCols}}</f:variable>
 <asd:data.imageVariants as="variants" variants="{settings.responsiveimages.variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
 <div class="article articletype-{newsItem.type}{f:if(condition: newsItem.istopnews, then: ' topnews')} column {columnConfig.class}" itemscope="itemscope" itemtype="http://schema.org/Article">
