[FEATURE] Add config to manage grid in page layouts

--- a/Resources/Private/Templates/Page/SidebarLeftWNavigation.html
+++ b/Resources/Private/Templates/Page/SidebarLeftWNavigation.html
@@ -10,11 +10,11 @@
 
     <section id="content">
         <div class="container{f:if(condition: breadcrumb, then: ' after-breadcrumb')}">
-            <div class="columns is-multiline is-flex-direction-row-reverse is-variable is-5-desktop is-8-widescreen">
-                <main id="main" class="column is-three-quarters-desktop is-full-tablet">
+            <div class="{settings.layouts.{current}.columns.wrapperClasses}">
+                <main id="main" class="{settings.layouts.{current}.columns.mainClasses}">
                     <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '0'}"/>
                 </main>
-                <aside class="column is-one-quarter-desktop is-full-tablet">
+                <aside class="{settings.layouts.{current}.columns.asideClasses}">
                     <f:render partial="Navigation/Sub" arguments="{_all}" />
                     <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '2'}"/>
                 </aside>
