--- a/Resources/Private/Templates/Page/SidebarRight.html
+++ b/Resources/Private/Templates/Page/SidebarRight.html
@@ -12,11 +12,11 @@
         <f:then>
             <section id="content">
                 <div class="container{f:if(condition: breadcrumb, then: ' after-breadcrumb')}">
-                    <div class="columns is-multiline is-variable is-5-desktop is-8-widescreen">
-                        <main id="main" class="column is-three-quarters-desktop is-full-tablet">
+                    <div class="{settings.layouts.{current}.columns.wrapperClasses}">
+                        <main id="main" class="{settings.layouts.{current}.columns.mainClasses}">
                             <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '0'}"/>
                         </main>
-                        <aside class="column is-one-quarter-desktop is-full-tablet">
+                        <aside class="{settings.layouts.{current}.columns.asideClasses}">
                             <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '2'}"/>
                         </aside>
                     </div>
