--- a/Resources/Private/Partials/Page/Structure/Footer.html
+++ b/Resources/Private/Partials/Page/Structure/Footer.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:asd="http://typo3.org/ns/AgrosupDijon/BulmaPackage/ViewHelpers"  data-namespace-typo3-fluid="true">
 <footer class="footer">
     <div class="container">
         <div class="columns">
