--- a/Resources/Public/Scss/Theme/_news.scss
+++ b/Resources/Public/Scss/Theme/_news.scss
@@ -1,6 +1,9 @@
 .news{
   .news-additional-informations{
     font-size: $small-font-size;
+    .icon-text{
+      align-items: center;
+    }
   }
 
   .news-gallery, .news-related{
