[BUGFIX] Fix module name

--- a/Resources/Private/Templates/WebsiteModule/Overview.html
+++ b/Resources/Private/Templates/WebsiteModule/Overview.html
@@ -53,7 +53,7 @@
 												</f:then>
 												<f:else if="{page.bulmaSettings.0}">
 													<f:variable name="justLocalized">tx_bulmapackage_settings%3A{page.bulmaSettings.0.uid}%3A{language}</f:variable>
-													<a class="btn btn-default" href="{be:moduleLink(route: 'tce_db', query: 'cmd[tx_bulmapackage_settings][{page.bulmaSettings.0.uid}][localize]={language}&redirect={f:be.uri(route: \'system_WebsiteSettings\')}&justLocalized={justLocalized -> f:format.urlencode()}')}">
+													<a class="btn btn-default" href="{be:moduleLink(route: 'tce_db', query: 'cmd[tx_bulmapackage_settings][{page.bulmaSettings.0.uid}][localize]={language}&redirect={f:be.uri(route: \'system_BulmaPackageWebsitesettings\')}&justLocalized={justLocalized -> f:format.urlencode()}')}">
 														<core:icon identifier="{languages.{language}.flagIdentifier}" /> <f:translate key="LLL:EXT:bulma_package/Resources/Private/Language/locallang_websitemodule.xlf:overview.configuration.translate" />
 													</a>
 												</f:else>
