--- a/Resources/Private/Templates/FrontendLogin/Login/Logout.html
+++ b/Resources/Private/Templates/FrontendLogin/Login/Logout.html
@@ -1,9 +1,5 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:if condition="{cookieWarning}">
-    <f:render partial="CookieWarning"/>
-</f:if>
-
 <h3>
     <f:render partial="RenderLabelOrMessage" arguments="{key: 'status_header'}"/>
 </h3>
@@ -20,13 +16,12 @@
     </div>
     <div class="field">
         <div class="control">
-            <f:form.submit value="{f:translate(key: 'logout')}" name="submit" class="button is-primary" />
+            <f:form.submit value="{f:translate(key: 'logout')}" name="submit" id="tx-felogin-input-logout" class="button is-primary" />
         </div>
     </div>
 
     <div class="felogin-hidden">
         <f:form.hidden name="logintype" value="logout"/>
-        <f:form.hidden name="pid" value="{storagePid}"/>
     </div>
 </f:form>
 </html>
