--- a/Resources/Private/Templates/Form/Finishers/Confirmation/Confirmation.html
+++ b/Resources/Private/Templates/Form/Finishers/Confirmation/Confirmation.html
@@ -1,11 +1,13 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:formvh="http://typo3.org/ns/TYPO3/CMS/Form/ViewHelpers" data-namespace-typo3-fluid="true">
-<div id="{form.identifier}" class="notification is-success">
+<div id="{form.identifier}">
     <f:if condition="{isPreparedMessage}">
         <f:then>
             {message -> f:format.raw()}
         </f:then>
         <f:else>
-            {message}
+            <div  class="notification is-success">
+                {message -> f:format.nl2br()}
+            </div>
         </f:else>
     </f:if>
 </div>
