--- a/Resources/Private/Templates/Form/Form.html
+++ b/Resources/Private/Templates/Form/Form.html
@@ -11,10 +11,10 @@
             addQueryString="{form.renderingOptions.addQueryString}"
             argumentsToBeExcludedFromQueryString="{form.renderingOptions.argumentsToBeExcludedFromQueryString}"
             additionalParams="{form.renderingOptions.additionalParams}"
-            novalidate="1"
+            additionalAttributes="{formvh:translateElementProperty(element: form, property: 'fluidAdditionalAttributes')}"
         >
             <f:render partial="{form.currentPage.templateName}" arguments="{page: form.currentPage}" />
-            <div class="form-actions">
+            <div class="form-actions {form.renderingOptions.formNavigation.navigationWrapperClassAttribute}">
                 <f:render partial="Form/Navigation" arguments="{form: form}" />
             </div>
         </formvh:form>
