--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -1,5 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:spaceless>
+    <f:cObject typoscriptObjectPath="lib.bulmaPackage.webSiteStructuredData" />
     <a class="is-sr-only" href="#main">
         <span>{f:translate(key: 'skiptomaincontent', extensionName: 'bulma_package')}</span>
     </a>
