--- a/Resources/Private/Templates/Page/SidebarRight.html
+++ b/Resources/Private/Templates/Page/SidebarRight.html
@@ -11,7 +11,7 @@
     <f:if condition="{f:cObject(typoscriptObjectPath: 'lib.dynamicContent', data: '{pageUid: \'{data.uid}\', colPos: \'2\'}')}">
         <f:then>
             <section id="content">
-                <div class="container{f:if(condition: breadcrumb, then: ' after-breadcrumb')}">
+                <div class="container{f:if(condition: '{breadcrumb} && !{data.hide_breadcrumb}', then: ' after-breadcrumb')}">
                     <div class="{settings.layouts.{current}.columns.wrapperClasses}">
                         <main id="main" class="{settings.layouts.{current}.columns.mainClasses}">
                             <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '0'}"/>
