[FEATURE] Integration with EXT:rx_shariff
If EXT:rx_shariff is loaded, adds an option in page properties to display social media buttons of Heise Shariff

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -6,6 +6,7 @@
 
     <main id="main">
         <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '0'}"/>
+        <f:render partial="Structure/SocialMediaButtons" arguments="{showSocialMediaButtons: data.social_media_buttons, wrapInContainer: 1}" />
     </main>
 
 </f:section>
