--- a/Resources/Public/Scss/Theme/theme.scss
+++ b/Resources/Public/Scss/Theme/theme.scss
@@ -2,6 +2,7 @@
 // Variables
 //
 @import "variables";
+@import "derived_variables";
 
 //
 // Import needed Bulma Files
@@ -53,3 +54,4 @@
 @import "scroll";
 @import "pagination";
 @import "links";
+@import "shariff";
