--- a/Resources/Private/Templates/Page/SidebarRightWNavigation.html
+++ b/Resources/Private/Templates/Page/SidebarRightWNavigation.html
@@ -13,6 +13,7 @@
             <div class="{settings.layouts.{current}.columns.wrapperClasses}">
                 <main id="main" class="{settings.layouts.{current}.columns.mainClasses}">
                     <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '0'}"/>
+                    <f:render partial="Structure/SocialMediaButtons" arguments="{showSocialMediaButtons: data.social_media_buttons}" />
                 </main>
                 <aside class="{settings.layouts.{current}.columns.asideClasses}">
                     <f:render partial="Navigation/Sub" arguments="{_all}" />
