[BUGFIX] Change -color because CKeditor is now using <strong>

--- a/Resources/Public/Scss/Theme/_variables.scss
+++ b/Resources/Public/Scss/Theme/_variables.scss
@@ -1,4 +1,7 @@
 
+// Generic
+$strong-color: currentColor !default;
+
 // Content
 $content-heading-color: currentColor !default;
 $content-table-cell-heading-color: currentColor !default;
