--- a/Resources/Private/Partials/News/List/Item.html
+++ b/Resources/Private/Partials/News/List/Item.html
@@ -7,19 +7,10 @@
 		Partials/List/Item.html
 -->
 <n:excludeDisplayedNews newsItem="{newsItem}" />
-<f:variable name="newsCols">3</f:variable>
-<f:if condition="{settings.templateLayout} == 1">
-	<f:variable name="newsCols">4</f:variable>
-</f:if>
-<f:if condition="{settings.templateLayout} == 2">
-	<f:variable name="newsCols">2</f:variable>
-</f:if>
-<f:if condition="{settings.templateLayout} == 3">
-	<f:variable name="newsCols">1</f:variable>
-</f:if>
+<f:variable name="newsCols">{settings.layouts.{settings.templateLayout}.detail.cols -> f:or(alternative:settings.layouts.default.detail.cols)}</f:variable>
 <f:variable name="columnConfig">{settings.responsiveimages.list.{newsCols}}</f:variable>
 <asd:data.imageVariants as="variants" variants="{settings.responsiveimages.variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
-<div class="article articletype-{newsItem.type}{f:if(condition: newsItem.istopnews, then: ' topnews')} column {columnConfig.class}" itemscope="itemscope" itemtype="http://schema.org/Article">
+<div class="article articletype-{newsItem.type}{f:if(condition: newsItem.istopnews, then: ' topnews')} {settings.layouts.{settings.templateLayout}.detail.extraCssClasses -> f:or(alternative:settings.layouts.default.detail.extraCssClasses)} {columnConfig.class}" itemscope="itemscope" itemtype="http://schema.org/Article">
 	<div class="card card-equal-height">
 
 		<f:if condition="{newsItem.mediaPreviews}">
