[TASK] Add variable for news carousel content color

--- a/Resources/Public/Scss/Theme/_news.scss
+++ b/Resources/Public/Scss/Theme/_news.scss
@@ -1,3 +1,5 @@
+$news-carousel-content-background-dark-color: $carousel-content-background-dark-color !default;
+
 .news{
   .news-additional-informations{
     font-size: $small-font-size;
@@ -15,6 +17,11 @@
     }
   }
   .carousel{
+    .content{
+      *{
+        color: $news-carousel-content-background-dark-color;
+      }
+    }
     .news-additional-informations{
       display: flex;
       .icon-text{
